--- a/analyzing-lit.qmd
+++ b/analyzing-lit.qmd
@@ -5,7 +5,7 @@ format:
   revealjs:
     theme: custom-dark.scss
     css: [timer.css, checkbox.css]
-    preview-links: auto
+    preview-links: false
     incremental: true
     chalkboard: 
       buttons: false
@@ -27,7 +27,6 @@ execute:
   echo: true
   warning: false
   message: false
-  freeze: true
 ---
 
 # Overview
